...
                            .frame(maxWidth: .infinity, alignment: .leading)
                    }
                    .backgroundLabel()
                    
                    Spacer(minLength: 5)
                    
                    Button("Continuar") {
                        path.append(Router.login)
                    }
                    .buttonStyle(IslasButton())
                    
                    Button(action: {}) {
                        Label("Tengo un enlace de invitación", systemImage: "link")
...
